# roguelike-rust

./: Cargo.toml  design.md  run.sh  snippets.rs
docs/: design.md
engine/src/: components.rs  entity_factory.rs  gamelog.rs  input_handler.rs  lib.rs  map.rs  player.rs  utils.rs
src/: components.rs  dijkstra_utils.rs  entity_factory.rs  game_modes.rs  gamelog.rs  input_handler.rs  main.rs  map.rs  movement.rs  player.rs  rect.rs  utils.rs  weighted_table.rs
src/ai/: decisions.rs  labors.rs  mod.rs  notes.md
src/effects/: confusion.rs  damage.rs  delete.rs  explore.rs  fire.rs  heal.rs  inventory.rs  mod.rs  movement.rs
src/gui/: camera.rs  gui_menus.rs  mod.rs
src/inventory_system/: drop_item_system.rs  item_use_system.rs  mod.rs  unequip_item_system.rs
src/item_system/: drop_item_system.rs  item_use_system.rs  mod.rs  system_drop_item.rs  system_item_use.rs  system_unequip_item.rs
src/map_builders/: arena.rs  bsp_dungeon.rs  bsp_farm.rs  bsp_interior.rs  cellular_automata.rs  common.rs  drunkardsbombingrun.rs  mod.rs  simple_map.rs  village.rs
src/render/: camera.rs  gui_menus.rs  mod.rs
src/systems/: cleanup_system.rs  dissasemble_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  particle_system.rs  spawner_ai.rs  system_ai_fish.rs  system_ai_monster.rs  system_ai_spawner.rs  system_ai_villager.rs  system_cleanup.rs  system_dissasemble.rs  system_fire.rs  system_map_indexing.rs  system_melee_combat.rs  system_monster_ai.rs  system_particle.rs  system_pathfinding.rs  system_spawner_ai.rs  system_villager_ai.rs  (+3 more)
(+42 files in other folders)
