[package]
name = "roguelike"
version = "0.1.0"
authors = ["progressiveCaveman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
rltk = { version = "0.8.7", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.5"
lazy_static = "1.4.0"
shipyard = "0.6.2"